2008-04-06  Daniel Jacobowitz  <drow@false.org>

	* lib/utils.exp (diff): Open both files as binary.

2008-04-06  Daniel Jacobowitz  <dan@codesourcery.com>

	* dejagnu.h (totals): Correct typos.

2008-04-06  Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/user.xml (Adding a New Tool, Adding a New Target): Fix typos.
	* doc/dejagnu.texi: Regenerate.

2008-02-25  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1: Update date of last revision.

2008-02-11  Hans-Peter Nilsson  <hp@axis.com>

	* baseboards/h8300.exp: Use -- before switch argument that may
	begin with "-".
	* baseboards/cris-sim.exp: Ditto.

2008-02-11  Hans-Peter Nilsson  <hp@axis.com>

	* Makefile.am (baseboard_SCRIPTS): Add scripts cris-sim.exp,
	iq2000-sim.exp and m32r-linux-sim.exp.
	* Makefile.in: Regenerate.

2008-02-08  Ben Elliston  <bje@gnu.org>

	* baseboards/cris-sim.exp: Fix MS-DOS line termination.

2007-12-28  Joseph Myers  <joseph@codesourcery.com>

        * lib/target.exp (default_link): Initialize nobjects before use.

2007-12-06  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp (dg_bogus): Comment fix.

2007-10-31  DJ Delorie  <dj@redhat.com>

	* lib/framework.exp (open_logs): Line buffer the .sum file.

2007-09-04  Matt Kraai  <kraai@ftbfs.org>

	* doc/user.xml (Configuration): Fix typos.
	* doc/dejagnu.texi: Regenerate.

2007-08-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* lib/remote.exp (standard_send): Correct quoting.

2007-05-17  Ben Elliston  <bje@gnu.org>

	* doc/user.xml: Correct the syntax for running apt-get on a Debian
	GNU/Linux system. From Peter Welte <weltepe@gmail.com>.

2007-04-30  Bob Wilson  <bob.wilson@acm.org>

	* baseboards/xtensa-sim.exp: Set target_install.  Stop using
	basic-sim.exp.  Run the simulator with --turbo option.  Replace
	needs_status_wrapper with the simulator's --exit_with_target_code
	option. 

2006-10-15  Rob Savoye  <rob@bertha.welcomehome.org>

	* dejagnu.h: Add support for for expected failures and
	unexpected successes.
