@@ -133,49 +133,50 @@ proc host_execute {args} {
     # test case.
     # spawn -noecho -open [open "|./${executable}" "r"]
     spawn -noecho "./${executable}" ${params}
+    set prefix "\[^\r\n\]*"
     expect {
-	-re "\[0-9\]\[0-9\]:..:..:${text}\r\n" {
+	-re "^$prefix\[0-9\]\[0-9\]:..:..:${text}*\r\n" {
 	    regsub "\[\n\r\t\]*NOTE: $text\r\n" $expect_out(0,string) "" output
 	    verbose "$output" 3
 	    set timetol 0
 	    exp_continue
 	}
-	-re "NOTE:${text}*" {
+	-re "^$prefix\tNOTE:${text}*" {
 	    regsub "\[\n\r\t\]*NOTE: $text\r\n" $expect_out(0,string) "" output
 	    set output [string range $output 6 end]
 	    verbose "$output" 2
 	    set timetol 0
 	    exp_continue
 	}
-	-re "PASSED:${text}*" {
+	-re "^$prefix\tPASSED:${text}*" {
 	    regsub "\[\n\r\t\]*PASSED: $text\r\n" $expect_out(0,string) "" output
 	    set output [string range $output 8 end]
 	    pass "$output"
 	    set timetol 0
 	    exp_continue
 	}
-	-re "FAILED:${text}*" {
+	-re "^$prefix\tFAILED:${text}*" {
 	    regsub "\[\n\r\t\]*FAILED: $text\r\n" $expect_out(0,string) "" output
 	    set output [string range $output 8 end]
 	    fail "$output"
 	    set timetol 0
 	    exp_continue
 	}
-	-re "UNTESTED:${text}*" {
+	-re "^$prefix\tUNTESTED:${text}*" {
 	    regsub "\[\n\r\t\]*TESTED: $text\r\n" $expect_out(0,string) "" output
 	    set output [string range $output 8 end]
 	    untested "$output"
 	    set timetol 0
 	    exp_continue
 	}
-	-re "UNRESOLVED:${text}*" {
+	-re "^$prefix\tUNRESOLVED:${text}*" {
 	    regsub "\[\n\r\t\]*UNRESOLVED: $text\r\n" $expect_out(0,string) "" output
 	    set output [string range $output 8 end]
 	    unresolved "$output"
 	    set timetol 0
 	    exp_continue
 	}
-	-re "Totals" {
+	-re "^Totals" {
 	    verbose "All done" 2
 	}
 	eof {
@@ -192,6 +193,9 @@ proc host_execute {args} {
 		-		catch close
 		return "Timed out executing test case"
 	    }
+	}
+	-re "^$prefix\r\n" {
+	    exp_continue
 	}
     }
 
